--- a/instat/dlgRegressionSimple.resx
+++ b/instat/dlgRegressionSimple.resx
@@ -199,7 +199,7 @@
     <value>NoControl</value>
   </data>
   <data name="lblResponse.Location" type="System.Drawing.Point, System.Drawing">
-    <value>246, 34</value>
+    <value>247, 52</value>
   </data>
   <data name="lblResponse.Size" type="System.Drawing.Size, System.Drawing">
     <value>96, 13</value>
@@ -220,7 +220,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblResponse.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>11</value>
   </data>
   <data name="lblExplanatory.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -229,7 +229,7 @@
     <value>NoControl</value>
   </data>
   <data name="lblExplanatory.Location" type="System.Drawing.Point, System.Drawing">
-    <value>243, 86</value>
+    <value>247, 124</value>
   </data>
   <data name="lblExplanatory.Size" type="System.Drawing.Size, System.Drawing">
     <value>103, 13</value>
@@ -250,13 +250,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblExplanatory.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>10</value>
   </data>
   <data name="cmdDisplayOptions.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="cmdDisplayOptions.Location" type="System.Drawing.Point, System.Drawing">
-    <value>277, 226</value>
+    <value>250, 244</value>
   </data>
   <data name="cmdDisplayOptions.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 23</value>
@@ -277,16 +277,16 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;cmdDisplayOptions.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>9</value>
   </data>
   <data name="chkSaveModel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="chkSaveModel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>14, 228</value>
+    <value>11, 244</value>
   </data>
   <data name="chkSaveModel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>104, 24</value>
+    <value>89, 24</value>
   </data>
   <data name="chkSaveModel.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -304,13 +304,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;chkSaveModel.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>8</value>
   </data>
   <data name="cmdModelOptions.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="cmdModelOptions.Location" type="System.Drawing.Point, System.Drawing">
-    <value>275, 192</value>
+    <value>250, 214</value>
   </data>
   <data name="cmdModelOptions.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 23</value>
@@ -331,38 +331,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;cmdModelOptions.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="chkConvertToVariate.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="chkConvertToVariate.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="chkConvertToVariate.Location" type="System.Drawing.Point, System.Drawing">
-    <value>358, 39</value>
-  </data>
-  <data name="chkConvertToVariate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>70, 30</value>
-  </data>
-  <data name="chkConvertToVariate.TabIndex" type="System.Int32, mscorlib">
-    <value>10</value>
-  </data>
-  <data name="chkConvertToVariate.Text" xml:space="preserve">
-    <value>Convert 
-to variate</value>
-  </data>
-  <data name="&gt;&gt;chkConvertToVariate.Name" xml:space="preserve">
-    <value>chkConvertToVariate</value>
-  </data>
-  <data name="&gt;&gt;chkConvertToVariate.Type" xml:space="preserve">
-    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;chkConvertToVariate.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;chkConvertToVariate.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>7</value>
   </data>
   <data name="chkFunction.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -371,7 +340,7 @@ to variate</value>
     <value>NoControl</value>
   </data>
   <data name="chkFunction.Location" type="System.Drawing.Point, System.Drawing">
-    <value>357, 98</value>
+    <value>250, 168</value>
   </data>
   <data name="chkFunction.Size" type="System.Drawing.Size, System.Drawing">
     <value>76, 17</value>
@@ -392,37 +361,67 @@ to variate</value>
     <value>$this</value>
   </data>
   <data name="&gt;&gt;chkFunction.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>6</value>
+  </data>
+  <data name="chkConvertToVariate.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="chkConvertToVariate.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="chkConvertToVariate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>249, 97</value>
+  </data>
+  <data name="chkConvertToVariate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>111, 17</value>
+  </data>
+  <data name="chkConvertToVariate.TabIndex" type="System.Int32, mscorlib">
+    <value>14</value>
+  </data>
+  <data name="chkConvertToVariate.Text" xml:space="preserve">
+    <value>Convert to Variate</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.Name" xml:space="preserve">
+    <value>chkConvertToVariate</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <data name="ucrModelName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>122, 226</value>
+    <value>102, 244</value>
   </data>
   <data name="ucrModelName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 23</value>
+    <value>120, 21</value>
   </data>
   <data name="ucrModelName.TabIndex" type="System.Int32, mscorlib">
-    <value>6</value>
+    <value>13</value>
   </data>
   <data name="&gt;&gt;ucrModelName.Name" xml:space="preserve">
     <value>ucrModelName</value>
   </data>
   <data name="&gt;&gt;ucrModelName.Type" xml:space="preserve">
-    <value>instat.ucrVariableName, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>instat.ucrInputComboBox, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;ucrModelName.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrModelName.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>1</value>
   </data>
   <data name="ucrExplanatory.Location" type="System.Drawing.Point, System.Drawing">
-    <value>241, 102</value>
+    <value>250, 141</value>
   </data>
   <data name="ucrExplanatory.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="ucrExplanatory.Size" type="System.Drawing.Size, System.Drawing">
-    <value>106, 26</value>
+    <value>110, 24</value>
   </data>
   <data name="ucrExplanatory.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -437,16 +436,16 @@ to variate</value>
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrExplanatory.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>2</value>
   </data>
   <data name="ucrResponse.Location" type="System.Drawing.Point, System.Drawing">
-    <value>241, 50</value>
+    <value>250, 68</value>
   </data>
   <data name="ucrResponse.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="ucrResponse.Size" type="System.Drawing.Size, System.Drawing">
-    <value>106, 26</value>
+    <value>93, 26</value>
   </data>
   <data name="ucrResponse.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -461,16 +460,16 @@ to variate</value>
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrResponse.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>3</value>
   </data>
   <data name="ucrSelectorSimpleReg.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 0</value>
+    <value>9, 4</value>
   </data>
   <data name="ucrSelectorSimpleReg.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="ucrSelectorSimpleReg.Size" type="System.Drawing.Size, System.Drawing">
-    <value>242, 179</value>
+    <value>226, 186</value>
   </data>
   <data name="ucrSelectorSimpleReg.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -485,13 +484,34 @@ to variate</value>
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrSelectorSimpleReg.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>4</value>
+  </data>
+  <data name="ucrFamily.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 202</value>
+  </data>
+  <data name="ucrFamily.Size" type="System.Drawing.Size, System.Drawing">
+    <value>233, 43</value>
+  </data>
+  <data name="ucrFamily.TabIndex" type="System.Int32, mscorlib">
+    <value>12</value>
+  </data>
+  <data name="&gt;&gt;ucrFamily.Name" xml:space="preserve">
+    <value>ucrFamily</value>
+  </data>
+  <data name="&gt;&gt;ucrFamily.Type" xml:space="preserve">
+    <value>instat.ucrDistributions, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;ucrFamily.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;ucrFamily.ZOrder" xml:space="preserve">
+    <value>5</value>
   </data>
   <data name="ucrBase.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 255</value>
+    <value>11, 274</value>
   </data>
   <data name="ucrBase.Size" type="System.Drawing.Size, System.Drawing">
-    <value>410, 54</value>
+    <value>406, 54</value>
   </data>
   <data name="ucrBase.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -508,27 +528,6 @@ to variate</value>
   <data name="&gt;&gt;ucrBase.ZOrder" xml:space="preserve">
     <value>12</value>
   </data>
-  <data name="ucrFamily.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 182</value>
-  </data>
-  <data name="ucrFamily.Size" type="System.Drawing.Size, System.Drawing">
-    <value>225, 43</value>
-  </data>
-  <data name="ucrFamily.TabIndex" type="System.Int32, mscorlib">
-    <value>12</value>
-  </data>
-  <data name="&gt;&gt;ucrFamily.Name" xml:space="preserve">
-    <value>ucrFamily</value>
-  </data>
-  <data name="&gt;&gt;ucrFamily.Type" xml:space="preserve">
-    <value>instat.ucrDistributions, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;ucrFamily.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;ucrFamily.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -536,7 +535,7 @@ to variate</value>
     <value>6, 13</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>429, 306</value>
+    <value>418, 332</value>
   </data>
   <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
