--- a/instat/dlgRegressionSimple.resx
+++ b/instat/dlgRegressionSimple.resx
@@ -199,7 +199,7 @@
     <value>NoControl</value>
   </data>
   <data name="lblResponse.Location" type="System.Drawing.Point, System.Drawing">
-    <value>246, 34</value>
+    <value>247, 52</value>
   </data>
   <data name="lblResponse.Size" type="System.Drawing.Size, System.Drawing">
     <value>96, 13</value>
@@ -220,7 +220,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblResponse.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>13</value>
   </data>
   <data name="lblExplanatory.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -229,7 +229,7 @@
     <value>NoControl</value>
   </data>
   <data name="lblExplanatory.Location" type="System.Drawing.Point, System.Drawing">
-    <value>243, 86</value>
+    <value>247, 124</value>
   </data>
   <data name="lblExplanatory.Size" type="System.Drawing.Size, System.Drawing">
     <value>103, 13</value>
@@ -250,16 +250,16 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblExplanatory.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>12</value>
   </data>
   <data name="cmdDisplayOptions.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="cmdDisplayOptions.Location" type="System.Drawing.Point, System.Drawing">
-    <value>277, 226</value>
+    <value>250, 229</value>
   </data>
   <data name="cmdDisplayOptions.Size" type="System.Drawing.Size, System.Drawing">
-    <value>120, 23</value>
+    <value>110, 23</value>
   </data>
   <data name="cmdDisplayOptions.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -277,22 +277,22 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;cmdDisplayOptions.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>11</value>
   </data>
   <data name="chkSaveModel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="chkSaveModel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>14, 228</value>
+    <value>11, 259</value>
   </data>
   <data name="chkSaveModel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>104, 24</value>
+    <value>89, 24</value>
   </data>
   <data name="chkSaveModel.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
   </data>
   <data name="chkSaveModel.Text" xml:space="preserve">
-    <value>Save Model</value>
+    <value>Save Model:</value>
   </data>
   <data name="&gt;&gt;chkSaveModel.Name" xml:space="preserve">
     <value>chkSaveModel</value>
@@ -304,16 +304,16 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;chkSaveModel.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>10</value>
   </data>
   <data name="cmdModelOptions.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="cmdModelOptions.Location" type="System.Drawing.Point, System.Drawing">
-    <value>275, 192</value>
+    <value>250, 200</value>
   </data>
   <data name="cmdModelOptions.Size" type="System.Drawing.Size, System.Drawing">
-    <value>120, 23</value>
+    <value>110, 23</value>
   </data>
   <data name="cmdModelOptions.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -331,38 +331,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;cmdModelOptions.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="chkConvertToVariate.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="chkConvertToVariate.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="chkConvertToVariate.Location" type="System.Drawing.Point, System.Drawing">
-    <value>358, 39</value>
-  </data>
-  <data name="chkConvertToVariate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>70, 30</value>
-  </data>
-  <data name="chkConvertToVariate.TabIndex" type="System.Int32, mscorlib">
-    <value>10</value>
-  </data>
-  <data name="chkConvertToVariate.Text" xml:space="preserve">
-    <value>Convert 
-to variate</value>
-  </data>
-  <data name="&gt;&gt;chkConvertToVariate.Name" xml:space="preserve">
-    <value>chkConvertToVariate</value>
-  </data>
-  <data name="&gt;&gt;chkConvertToVariate.Type" xml:space="preserve">
-    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;chkConvertToVariate.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;chkConvertToVariate.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>9</value>
   </data>
   <data name="chkFunction.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -371,7 +340,7 @@ to variate</value>
     <value>NoControl</value>
   </data>
   <data name="chkFunction.Location" type="System.Drawing.Point, System.Drawing">
-    <value>357, 98</value>
+    <value>250, 168</value>
   </data>
   <data name="chkFunction.Size" type="System.Drawing.Size, System.Drawing">
     <value>76, 17</value>
@@ -392,37 +361,118 @@ to variate</value>
     <value>$this</value>
   </data>
   <data name="&gt;&gt;chkFunction.ZOrder" xml:space="preserve">
+    <value>8</value>
+  </data>
+  <data name="chkConvertToVariate.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="chkConvertToVariate.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="chkConvertToVariate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>249, 97</value>
+  </data>
+  <data name="chkConvertToVariate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>111, 17</value>
+  </data>
+  <data name="chkConvertToVariate.TabIndex" type="System.Int32, mscorlib">
+    <value>14</value>
+  </data>
+  <data name="chkConvertToVariate.Text" xml:space="preserve">
+    <value>Convert to Variate</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.Name" xml:space="preserve">
+    <value>chkConvertToVariate</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="lblModelPreview.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="lblModelPreview.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="lblModelPreview.Location" type="System.Drawing.Point, System.Drawing">
+    <value>8, 207</value>
+  </data>
+  <data name="lblModelPreview.Size" type="System.Drawing.Size, System.Drawing">
+    <value>80, 13</value>
+  </data>
+  <data name="lblModelPreview.TabIndex" type="System.Int32, mscorlib">
+    <value>16</value>
+  </data>
+  <data name="lblModelPreview.Text" xml:space="preserve">
+    <value>Model Preview:</value>
+  </data>
+  <data name="&gt;&gt;lblModelPreview.Name" xml:space="preserve">
+    <value>lblModelPreview</value>
+  </data>
+  <data name="&gt;&gt;lblModelPreview.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lblModelPreview.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;lblModelPreview.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="ucrModelPreview.Location" type="System.Drawing.Point, System.Drawing">
+    <value>100, 202</value>
+  </data>
+  <data name="ucrModelPreview.Size" type="System.Drawing.Size, System.Drawing">
+    <value>122, 21</value>
+  </data>
+  <data name="ucrModelPreview.TabIndex" type="System.Int32, mscorlib">
+    <value>15</value>
+  </data>
+  <data name="&gt;&gt;ucrModelPreview.Name" xml:space="preserve">
+    <value>ucrModelPreview</value>
+  </data>
+  <data name="&gt;&gt;ucrModelPreview.Type" xml:space="preserve">
+    <value>instat.ucrInputTextBox, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;ucrModelPreview.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;ucrModelPreview.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
   <data name="ucrModelName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>122, 226</value>
+    <value>100, 259</value>
   </data>
   <data name="ucrModelName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 23</value>
+    <value>122, 21</value>
   </data>
   <data name="ucrModelName.TabIndex" type="System.Int32, mscorlib">
-    <value>6</value>
+    <value>13</value>
   </data>
   <data name="&gt;&gt;ucrModelName.Name" xml:space="preserve">
     <value>ucrModelName</value>
   </data>
   <data name="&gt;&gt;ucrModelName.Type" xml:space="preserve">
-    <value>instat.ucrVariableName, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>instat.ucrInputComboBox, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;ucrModelName.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrModelName.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>3</value>
   </data>
   <data name="ucrExplanatory.Location" type="System.Drawing.Point, System.Drawing">
-    <value>241, 102</value>
+    <value>250, 141</value>
   </data>
   <data name="ucrExplanatory.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="ucrExplanatory.Size" type="System.Drawing.Size, System.Drawing">
-    <value>106, 26</value>
+    <value>110, 24</value>
   </data>
   <data name="ucrExplanatory.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -437,16 +487,16 @@ to variate</value>
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrExplanatory.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>4</value>
   </data>
   <data name="ucrResponse.Location" type="System.Drawing.Point, System.Drawing">
-    <value>241, 50</value>
+    <value>250, 68</value>
   </data>
   <data name="ucrResponse.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="ucrResponse.Size" type="System.Drawing.Size, System.Drawing">
-    <value>106, 26</value>
+    <value>110, 26</value>
   </data>
   <data name="ucrResponse.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -461,16 +511,16 @@ to variate</value>
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrResponse.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>5</value>
   </data>
   <data name="ucrSelectorSimpleReg.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 0</value>
+    <value>9, 4</value>
   </data>
   <data name="ucrSelectorSimpleReg.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="ucrSelectorSimpleReg.Size" type="System.Drawing.Size, System.Drawing">
-    <value>242, 179</value>
+    <value>226, 186</value>
   </data>
   <data name="ucrSelectorSimpleReg.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -485,34 +535,13 @@ to variate</value>
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrSelectorSimpleReg.ZOrder" xml:space="preserve">
-    <value>11</value>
-  </data>
-  <data name="ucrBase.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 255</value>
-  </data>
-  <data name="ucrBase.Size" type="System.Drawing.Size, System.Drawing">
-    <value>410, 54</value>
-  </data>
-  <data name="ucrBase.TabIndex" type="System.Int32, mscorlib">
-    <value>8</value>
-  </data>
-  <data name="&gt;&gt;ucrBase.Name" xml:space="preserve">
-    <value>ucrBase</value>
-  </data>
-  <data name="&gt;&gt;ucrBase.Type" xml:space="preserve">
-    <value>instat.ucrButtons, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;ucrBase.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;ucrBase.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>6</value>
   </data>
   <data name="ucrFamily.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 182</value>
+    <value>5, 217</value>
   </data>
   <data name="ucrFamily.Size" type="System.Drawing.Size, System.Drawing">
-    <value>225, 43</value>
+    <value>233, 43</value>
   </data>
   <data name="ucrFamily.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -527,7 +556,28 @@ to variate</value>
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrFamily.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>7</value>
+  </data>
+  <data name="ucrBase.Location" type="System.Drawing.Point, System.Drawing">
+    <value>11, 289</value>
+  </data>
+  <data name="ucrBase.Size" type="System.Drawing.Size, System.Drawing">
+    <value>406, 54</value>
+  </data>
+  <data name="ucrBase.TabIndex" type="System.Int32, mscorlib">
+    <value>8</value>
+  </data>
+  <data name="&gt;&gt;ucrBase.Name" xml:space="preserve">
+    <value>ucrBase</value>
+  </data>
+  <data name="&gt;&gt;ucrBase.Type" xml:space="preserve">
+    <value>instat.ucrButtons, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;ucrBase.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;ucrBase.ZOrder" xml:space="preserve">
+    <value>14</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -536,7 +586,7 @@ to variate</value>
     <value>6, 13</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>429, 306</value>
+    <value>418, 344</value>
   </data>
   <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
